поменял везде юри , добавил контроллеры , добавил клиентов , добавил обработку повторной регистрации